--- a/app/src/main/res/layout/user_picview.xml
+++ b/app/src/main/res/layout/user_picview.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -7,15 +8,19 @@
     </data>
 
     <com.facebook.shimmer.ShimmerFrameLayout
+        android:layout_marginStart="-20dp"
+        android:layout_marginTop="0dp"
+        android:clipToPadding="false"
+        android:elevation="0dp"
         android:id="@+id/picShimmer"
+        app:shimmer_colored="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/userpic"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_margin="-10dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:src="@drawable/notfound"
             tools:src="@drawable/notfound" />
     </com.facebook.shimmer.ShimmerFrameLayout>
