--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="android:fontFamily">@font/lato_regular</item>
         <item name="colorPrimary">@color/purple_400</item>
         <item name="colorPrimaryDark">@color/purple_800</item>
-        <item name="colorAccent">@color/deep_purple_A200</item>
+        <item name="colorAccent">@color/purple_A100</item>
         <item name="android:statusBarColor">?android:colorBackground</item>
         <item name="android:navigationBarColor">?android:colorBackground</item>
         <item name="alertDialogStyle">@style/AppTheme.AlertDialog</item>
@@ -120,7 +120,7 @@
         <item name="android:fontFamily">@font/lato_regular</item>
         <item name="colorPrimary">@color/purple_400</item>
         <item name="colorPrimaryDark">@color/purple_800</item>
-        <item name="colorAccent">@color/deep_purple_A200</item>
+        <item name="colorAccent">@color/purple_A100</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowBackground">@color/transparent</item>
     </style>
