--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,10 +9,11 @@
         android:id="@+id/home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="20dp">
+        android:padding="16dp">
 
 
         <include
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
@@ -34,6 +35,7 @@
                     android:id="@+id/home_search"
                     android:layout_height="wrap_content"
                     android:background="@drawable/round"
+                    android:backgroundTint="@color/lblack"
                     app:iconifiedByDefault="false"
                     android:layout_width="match_parent"
                     app:queryHint="Pesquise citações, autores, músicas" />
